[package]
name = "superluminal-perf"
version = "0.1.0"
#description = ""
authors = ["Embark <opensource@embark-studios.com>", "Johan Andersson <repi@repi.se>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/superluminal-perf-rs"
edition = "2018"
#keywords = []
#categories = []
readme = "README.md"

[workspace]
members = [
    "sys"
]

[lib]
doctest = false
test = false

[target.'cfg(windows)'.dependencies]
superluminal-perf-sys = { version = "*", path = "sys" }

[features]
default = ["enable"]
enable = []