[package]
name = "superluminal-perf-sys"
version = "0.1.3"
#description = ""
authors = ["Embark <opensource@embark-studios.com>", "Johan Andersson <repi@repi.se>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/cmp-core-rs"
edition = "2018"
#keywords = []
#categories = []
readme = "README.md"

[lib]
doctest = false
test = false

[dependencies]
libc = "0.2"
